--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
         <div class="title-bar">
             <a href="." class="no-deco">
                 <div class="align">
-                    <img src="assets/icon.png" alt="icon" class="rounded title">
+                    <img src="assets/icon.png" alt="icon" class="rounded title" width="112px" height="112px">
                     <h1 class="title">Bobo Bot</h1>
                 </div>
             </a>
