--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://bobobot.cf" />
         <meta property="og:image" content="https://bobobot.cf/assets/icon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="title-bar">
-            <a href="." class="no-deco">
+            <a href="." class="no-deco block">
                 <div class="align">
                     <img src="assets/icon.png" alt="icon" class="rounded title" width="112px" height="112px">
                     <h1 class="title">Bobo Bot</h1>
