--- a/privacy.html
+++ b/privacy.html
@@ -10,6 +10,10 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://bobobot.cf" />
         <meta property="og:image" content="https://bobobot.cf/assets/icon.png" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="title-bar">
