Make sure the footer doesn't block content

--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="title-bar">
-            <a href="." class="no-deco">
+            <a href="." class="no-deco block">
                 <div class="align">
                     <img src="assets/icon.png" alt="icon" class="rounded title" width="112px" height="112px">
                     <h1 class="title">Bobo Bot</h1>
@@ -80,11 +80,11 @@
                     <a href="mailto:bot@bobobot.cf">bot@bobobot.cf</a>.
             </div>
         </div>
-        <div class="footer">
+        <footer class="footer">
             <p>Copyright(C) 2022 by Cryptex. All rights reserved.</p>
             <a href="privacy.html" class="no-deco">
                 <p class="no-margin">Privacy Policy</p>
             </a>
-        </div>
+        </footer>
     </body>
 </html>
