--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bobo Bot</title>
-        <link rel="icon" href="assets/icon.png" type="image/x-icon">
-        <link rel="stylesheet" href="css/style.css">
-        <meta property="og:title" content="Bobo Bot" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://bobobot.cf" />
-        <meta property="og:image" content="https://bobobot.cf/assets/icon.png" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="title-bar">
-            <a href="." class="no-deco block">
-                <div class="align">
-                    <img src="assets/icon.png" alt="icon" class="rounded title" width="112px" height="112px">
-                    <h1 class="title">Bobo Bot</h1>
-                </div>
-            </a>
-        </div>
-        <div class="center bold">
-            <p>Bobo Bot, The Anime Bot but better.</p>
-        </div>
-        <div class="footer">
-            <p>Copyright(C) 2022 by Cryptex. All rights reserved.</p>
-            <a href="privacy.html" class="no-deco">
-                <p class="no-margin">Privacy Policy</p>
-            </a>
-        </div>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bobo Bot</title>
+    <link rel="icon" href="/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <meta property="og:title" content="Bobo Bot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bobobot.cf" />
+    <meta property="og:image" content="/icon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
