--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bobobot.cf" />
     <meta property="og:image" content="/icon.png" />
+    <meta property="description" content="Bobo Bot - A Discord Bot" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap" rel="stylesheet">
